--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <link rel="stylesheet" href="./style.css" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Biskra CS Student Helper – S3/S4</title>
+    <title>Biskra CS Student Helper – All Year</title>
+    <link rel="icon" href="icon.png">
+    <link rel="manifest" href="/manifest.json">
 </head>
 
 <body>
     <footer class="footer">
         <div class="footerInner">
             <div class="footerCard">
+                <div style="display: flex; gap: 5px;">
+                <div style="display: flex; align-items: center; gap: 10px;">
                 <div>Made by Abderrazak Achour</div>
 
                 <a class="iconLink" href="https://github.com/abderazak-py/" target="_blank" rel="noopener noreferrer"
@@ -22,7 +26,25 @@
                             d="M12 .5C5.73.5.75 5.62.75 12c0 5.1 3.29 9.42 7.86 10.95.58.11.79-.26.79-.57v-2.1c-3.2.72-3.87-1.59-3.87-1.59-.53-1.37-1.3-1.74-1.3-1.74-1.06-.74.08-.73.08-.73 1.17.08 1.79 1.23 1.79 1.23 1.04 1.82 2.73 1.29 3.4.99.11-.77.41-1.29.74-1.59-2.56-.3-5.26-1.31-5.26-5.83 0-1.29.45-2.35 1.2-3.18-.12-.3-.52-1.53.11-3.2 0 0 .98-.32 3.2 1.22a10.8 10.8 0 0 1 2.91-.4c.99 0 1.99.14 2.91.4 2.22-1.54 3.2-1.22 3.2-1.22.63 1.67.23 2.9.11 3.2.75.83 1.2 1.89 1.2 3.18 0 4.53-2.71 5.53-5.29 5.82.42.37.8 1.1.8 2.22v3.29c0 .31.21.68.8.57A11.27 11.27 0 0 0 23.25 12C23.25 5.62 18.27.5 12 .5z" />
                     </svg>
                 </a>
+                </div>
+                <div style="display: flex; align-items: center; gap: 10px;">
+                <div>And Farhat</div>
+
+                <a class="iconLink" href="https://github.com/Farhat-141" target="_blank" rel="noopener noreferrer"
+                    aria-label="Open GitHub profile">
+                    <!-- GitHub icon (inline SVG) -->
+                    <svg viewBox="0 0 24 24" aria-hidden="true">
+                        <path
+                            d="M12 .5C5.73.5.75 5.62.75 12c0 5.1 3.29 9.42 7.86 10.95.58.11.79-.26.79-.57v-2.1c-3.2.72-3.87-1.59-3.87-1.59-.53-1.37-1.3-1.74-1.3-1.74-1.06-.74.08-.73.08-.73 1.17.08 1.79 1.23 1.79 1.23 1.04 1.82 2.73 1.29 3.4.99.11-.77.41-1.29.74-1.59-2.56-.3-5.26-1.31-5.26-5.83 0-1.29.45-2.35 1.2-3.18-.12-.3-.52-1.53.11-3.2 0 0 .98-.32 3.2 1.22a10.8 10.8 0 0 1 2.91-.4c.99 0 1.99.14 2.91.4 2.22-1.54 3.2-1.22 3.2-1.22.63 1.67.23 2.9.11 3.2.75.83 1.2 1.89 1.2 3.18 0 4.53-2.71 5.53-5.29 5.82.42.37.8 1.1.8 2.22v3.29c0 .31.21.68.8.57A11.27 11.27 0 0 0 23.25 12C23.25 5.62 18.27.5 12 .5z" />
+                    </svg>
+                </a>
+                </div>
+                </div>
+                <div id="mode" class="mode">
+                    <img style="border-radius: 50%;" width="25px" src="toggle2.png" alt="">
+                </div>
             </div>
+            
         </div>
     </footer>
 
