--- a/index.html
+++ b/index.html
@@ -496,13 +496,14 @@
 
 
     </div>
-    <script src="sw.js"></script>
     <script src="./app.js" defer></script>
     <script>
         if ("serviceWorker" in navigator) {
-        window.addEventListener("load", () => {
-            navigator.serviceWorker.register("/sw.js");
-        });
+            window.addEventListener("load", () => {
+                navigator.serviceWorker.register("/sw.js")
+                    .then(reg => console.log("✅ Service Worker registered:", reg))
+                    .catch(err => console.error("❌ Service Worker registration failed:", err));
+            });
         }
     </script>
 </body>
