--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
             </div>
 
             <div style="display:flex; gap:10px; align-items:center; flex-wrap:wrap;">
-
                 <button id="mode" class="mode" type="button" aria-label="Toggle theme" title="Toggle theme">
                     <svg class="themeIcon" viewBox="0 0 24 24" aria-hidden="true">
                         <!-- Sun -->
@@ -49,37 +48,80 @@
                             <path d="M6.2 17.8l-1.6 1.6"></path>
                         </g>
                         <!-- Moon -->
-                        <path class="moon" fill="currentColor" d="M15.6 13.9c-3.1 0-5.6-2.5-5.6-5.6 0-1.3.4-2.5 1.2-3.5
-                 -3.3.4-5.9 3.2-5.9 6.7 0 3.8 3.1 6.9 6.9 6.9 3.5 0 6.3-2.6 6.7-5.9
-                 -1 .8-2.2 1.4-3.3 1.4z" />
+                        <path class="moon" fill="currentColor"
+                            d="M15.6 13.9c-3.1 0-5.6-2.5-5.6-5.6 0-1.3.4-2.5 1.2-3.5 -3.3.4-5.9 3.2-5.9 6.7 0 3.8 3.1 6.9 6.9 6.9 3.5 0 6.3-2.6 6.7-5.9 -1 .8-2.2 1.4-3.3 1.4z">
+                        </path>
                     </svg>
                 </button>
             </div>
         </header>
 
-        <!-- HOME (Main Menu) -->
+        <!-- HOME Main Menu -->
         <section class="page active" id="pagehome">
             <div class="homeBtns">
                 <a class="homeBtn" href="#calc">
-                    <div>
-                        <div class="t">Semester Calculator</div>
-                        <div class="d">Open all semester calculators (S1 → S6).</div>
+                    <div class="homeBtnLeft">
+                        <div class="homeIcon" aria-hidden="true">
+                            <!-- Calculator SVG -->
+                            <svg viewBox="0 0 24 24">
+                                <path
+                                    d="M7 2h10a3 3 0 0 1 3 3v14a3 3 0 0 1-3 3H7a3 3 0 0 1-3-3V5a3 3 0 0 1 3-3zm0 2a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1H7z">
+                                </path>
+                                <path d="M8 6h8v3H8V6z"></path>
+                                <path
+                                    d="M8 11h2v2H8v-2zm3 0h2v2h-2v-2zm3 0h2v2h-2v-2zM8 14h2v2H8v-2zm3 0h2v2h-2v-2zm3 0h2v2h-2v-2z">
+                                </path>
+                            </svg>
+                        </div>
+                        <div>
+                            <div class="t">Semester Calculator</div>
+                            <div class="d">Open all semester calculators (S1 → S6).</div>
+                        </div>
                     </div>
                     <div class="go">Open</div>
                 </a>
 
                 <a class="homeBtn" href="#pomodoro">
-                    <div>
-                        <div class="t">Pomodoro</div>
-                        <div class="d">Simple focus timer (25:00).</div>
+                    <div class="homeBtnLeft">
+                        <div class="homeIcon" aria-hidden="true">
+                            <!-- Pomodoro / Timer SVG -->
+                            <svg viewBox="0 0 24 24">
+                                <path d="M9 2h6v2H9V2z"></path>
+                                <path
+                                    d="M12 6a9 9 0 1 0 9 9 9.01 9.01 0 0 0-9-9zm0 2a7 7 0 1 1-7 7 7.01 7.01 0 0 1 7-7z">
+                                </path>
+                                <path
+                                    d="M12 10a1 1 0 0 1 1 1v3.2l2.1 2.1a1 1 0 0 1-1.4 1.4l-2.4-2.4A1 1 0 0 1 11 14v-3a1 1 0 0 1 1-1z">
+                                </path>
+                            </svg>
+                        </div>
+                        <div>
+                            <div class="t">Pomodoro</div>
+                            <div class="d">Auto focus/rest cycles with sound + long rest.</div>
+                        </div>
                     </div>
                     <div class="go">Open</div>
                 </a>
 
                 <a class="homeBtn" href="#adkar">
-                    <div>
-                        <div class="t">Adkar</div>
-                        <div class="d">أذكار + أدعية قصيرة (اضغط للعدّ).</div>
+                    <div class="homeBtnLeft">
+                        <div class="homeIcon" aria-hidden="true">
+                            <div class="homeIcon" aria-hidden="true">
+                                <svg viewBox="0 0 24 24">
+                                    <path
+                                        d="M14.6 2.2c-5 1.1-8.3 6-7.2 11 1.1 5 6 8.3 11 7.2 1.7-.4 3.3-1.3 4.5-2.6-1.8 2.8-5.1 4.6-8.8 4.6C8.5 22.4 4 18 4 12.5 4 7.2 8 2.9 13.2 2.2c.5-.1 1 0 1.4 0z">
+                                    </path>
+                                    <path
+                                        d="M18.6 6.3l.9 2.1 2.3.2-1.8 1.5.6 2.2-2-1.2-2 1.2.6-2.2-1.8-1.5 2.3-.2.9-2.1z">
+                                    </path>
+                                </svg>
+                            </div>
+
+                        </div>
+                        <div>
+                            <div class="t">Adkar</div>
+                            <div class="d">Tap each dhikr to count down.</div>
+                        </div>
                     </div>
                     <div class="go">Open</div>
                 </a>
@@ -88,7 +130,7 @@
 
         <!-- CALCULATOR HUB -->
         <section class="page" id="pagecalc">
-            <div class="homeHeader">Choose your semester:</div>
+            <div class="homeHeader">Choose your semester</div>
             <div class="homeBtns">
                 <a class="homeBtn" href="#s1">
                     <div>
@@ -97,6 +139,7 @@
                     </div>
                     <div class="go">Open</div>
                 </a>
+
                 <a class="homeBtn" href="#s2">
                     <div>
                         <div class="t">S2 Calculator</div>
@@ -104,6 +147,7 @@
                     </div>
                     <div class="go">Open</div>
                 </a>
+
                 <a class="homeBtn" href="#s3">
                     <div>
                         <div class="t">S3 Calculator</div>
@@ -111,6 +155,7 @@
                     </div>
                     <div class="go">Open</div>
                 </a>
+
                 <a class="homeBtn" href="#s4">
                     <div>
                         <div class="t">S4 Calculator</div>
@@ -118,6 +163,7 @@
                     </div>
                     <div class="go">Open</div>
                 </a>
+
                 <a class="homeBtn" href="#s5">
                     <div>
                         <div class="t">S5 Calculator</div>
@@ -125,6 +171,7 @@
                     </div>
                     <div class="go">Open</div>
                 </a>
+
                 <a class="homeBtn" href="#s6">
                     <div>
                         <div class="t">S6 Calculator</div>
@@ -148,12 +195,57 @@
             <div class="card">
                 <div class="hd">
                     <div class="h">Pomodoro</div>
-                    <div class="badge">25:00</div>
+                    <div class="badge" id="pomoBadge">Ready</div>
                 </div>
-                <div class="bd" style="text-align:center">
+
+                <div class="bd" style="text-align:center;">
+                    <div class="pomoConfig">
+                        <div class="row three">
+                            <div>
+                                <label>Focus</label>
+                                <select id="pomoFocusSelect">
+                                    <option value="5">5 min</option>
+                                    <option value="10">10 min</option>
+                                    <option value="25" selected>25 min</option>
+                                </select>
+                            </div>
+                            <div>
+                                <label>Short rest</label>
+                                <input id="pomoShort" type="number" min="1" max="60" step="1" value="5" />
+                            </div>
+                            <div>
+                                <label>Long rest</label>
+                                <input id="pomoLong" type="number" min="1" max="90" step="1" value="15" />
+                            </div>
+                        </div>
+
+                        <div class="row two" style="margin-top:10px;">
+                            <label class="toggleRow" for="pomoSound">
+                                <input id="pomoSound" class="pomoChk" type="checkbox" checked />
+                                <span class="chkBox" aria-hidden="true"></span>
+                                <span class="chkText">Sound</span>
+                            </label>
+
+                            <label class="toggleRow" for="pomoAuto">
+                                <input id="pomoAuto" class="pomoChk" type="checkbox" checked />
+                                <span class="chkBox" aria-hidden="true"></span>
+                                <span class="chkText">Auto next</span>
+                            </label>
+
+
+                        </div>
+                    </div>
+
                     <div class="big" id="pomoDisplay">25:00</div>
-                    <div class="actions" style="justify-content:center">
+
+                    <div class="kpi" style="justify-content:center; gap:18px;">
+                        <span>Phase: <strong id="pomoPhase">Focus</strong></span>
+                        <span>Done: <strong id="pomoCount">0</strong>/5</span>
+                    </div>
+
+                    <div class="actions" style="justify-content:center;">
                         <button id="btnPomoToggle">Start</button>
+                        <button id="btnPomoSkip" class="secondary">Skip</button>
                         <button id="btnPomoReset" class="secondary">Reset</button>
                         <button id="btnPomoHome" class="secondary">Home</button>
                     </div>
@@ -197,7 +289,7 @@
                     </div>
 
                     <div class="actions">
-                        <button class="secondary" onclick="location.hash='#home'">Home</button>
+                        <button class="secondary" onclick="location.hash='home'">Home</button>
                     </div>
                 </div>
             </div>
@@ -241,19 +333,18 @@
                     </div>
                 </div>
 
-                <div style="opacity:.7">CS Helper • Offline-ready (PWA)</div>
+                <div style="opacity:.7;">CS Helper • Offline-ready PWA</div>
             </div>
         </div>
     </footer>
 
     <script src="app.js" defer></script>
-
     <script>
-        if ("serviceWorker" in navigator) {
-            window.addEventListener("load", () => {
-                navigator.serviceWorker.register("sw.js")
-                    .then(reg => console.log("Service Worker registered", reg))
-                    .catch(err => console.error("Service Worker registration failed", err));
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('sw.js')
+                    .then(reg => console.log('Service Worker registered', reg))
+                    .catch(err => console.error('Service Worker registration failed', err));
             });
         }
     </script>
