added questions now 50

--- a/index.html
+++ b/index.html
@@ -128,7 +128,6 @@
                     <div class="go">Open</div>
                 </a>
 
-                <!-- ✅ NEW: Quiz button after Adkar -->
                 <a class="homeBtn" href="#quiz">
                     <div class="homeBtnLeft">
                         <div class="homeIcon" aria-hidden="true">
@@ -305,7 +304,6 @@
             </div>
         </section>
 
-        <!-- ✅ NEW: QUIZ -->
         <section class="page" id="pagequiz">
             <div class="card">
                 <div class="hd">
@@ -381,7 +379,7 @@
                     </div>
                 </div>
 
-                <div style="opacity:.7">CS Helper — Offline-ready PWA</div>
+                <div style="opacity:.7">CS Helper | Offline-ready PWA</div>
             </div>
         </div>
     </footer>
