code refactore, added docs and comments

--- a/index.html
+++ b/index.html
@@ -492,6 +492,16 @@
         </div>
     </footer>
 
+    <script src="theme.js" defer></script>
+    <script src="persistence.js" defer></script>
+    <script src="modules.js" defer></script>
+    <script src="ui.js" defer></script>
+    <script src="calculator.js" defer></script>
+    <script src="router.js" defer></script>
+    <script src="pomodoro.js" defer></script>
+    <script src="adkar.js" defer></script>
+    <script src="quiz.js" defer></script>
+    <script src="habits.js" defer></script>
     <script src="app.js" defer></script>
     <script>
         if ('serviceWorker' in navigator) {
